PyMaker/datas/object2/RawHTML/Python_DOC_referPages.f-string-invalid-syntax-in-python-3-5.txt
<div class="post-text" itemprop="text">
<p>I know that <code>F Strings</code> were introduce in <code>Python 3.6</code>. For that i was getting error - <code>Invalid Syntax</code></p>
<pre><code>DATA_FILENAME = 'data.json'
def load_data(apps, schema_editor):
    Shop = apps.get_model('shops', 'Shop')
    jsonfile = Path(__file__).parents[2] / DATA_FILENAME

    with open(str(jsonfile)) as datafile:
        objects = json.load(datafile)
        for obj in objects['elements']:
            try:
                objType = obj['type']
                if objType == 'node':
                    tags = obj['tags']
                    name = tags.get('name','no-name')
                    longitude = obj.get('lon', 0)
                    latitude = obj.get('lat', 0)
                    location = fromstr(F'POINT({longitude} {latitude})', srid=4326)
                    Shop(name=name, location = location).save()
            except KeyError:
                pass    
</code></pre>
<p>Error - </p>
<pre><code>location = (F'POINT({longitude} {latitude})', srid=4326)
                                           ^
SyntaxError: invalid syntax
</code></pre>
<p>So i used - </p>
<pre><code>fromstr('POINT({} {})'.format(longitude, latitude), srid=4326)
</code></pre>
<p>The Error was removed and it worked for me. Then i found this library <a href="https://github.com/asottile/future-fstrings" rel="nofollow noreferrer">future-fstrings</a>. Should i use it. Which will remove the above <code>Invalid Error</code></p>
</div>
<div class="post-text" itemprop="text">
<p>For older versions of Python (before 3.6):</p>
<p>Using <a href="https://github.com/asottile/future-fstrings" rel="nofollow noreferrer"><code>future-fstrings</code></a>:</p>
<pre><code>pip install future-fstrings 
</code></pre>
<p>you have to place a special line at the top of your code:</p>
<pre><code>coding: future_fstrings
</code></pre>
<p>Hence in your case:</p>
<pre><code>-*- coding: future_fstrings -*-     # should work even without -*-
# rest of the code
location = fromstr(f'POINT({longitude} {latitude})', srid=4326)
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>f-strings weren't added to the language until 3.6. sorry.</p>
</div>
<span class="comment-copy">@DirtyBit Added Pleease see</span>
<span class="comment-copy">Format ("f") strings have not been introduced before Python 3.6.</span>
<span class="comment-copy">Well, f-strings are only available since Python 3.6.</span>
<span class="comment-copy">Why does the error message not match your code?</span>
<span class="comment-copy">Probably just a copy-and-paste error.</span>
<span class="comment-copy">Note that this requires producing a new source file that uses the <code>format</code> method rather than making f-strings work in-place.</span>
